[package]
name = "abc135"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc135-a", problem = { platform = "atcoder", contest = "abc135", index = "A", url = "https://atcoder.jp/contests/abc135/tasks/abc135_a" } }
b = { name = "abc135-b", problem = { platform = "atcoder", contest = "abc135", index = "B", url = "https://atcoder.jp/contests/abc135/tasks/abc135_b" } }
c = { name = "abc135-c", problem = { platform = "atcoder", contest = "abc135", index = "C", url = "https://atcoder.jp/contests/abc135/tasks/abc135_c" } }
d = { name = "abc135-d", problem = { platform = "atcoder", contest = "abc135", index = "D", url = "https://atcoder.jp/contests/abc135/tasks/abc135_d" } }
e = { name = "abc135-e", problem = { platform = "atcoder", contest = "abc135", index = "E", url = "https://atcoder.jp/contests/abc135/tasks/abc135_e" } }
f = { name = "abc135-f", problem = { platform = "atcoder", contest = "abc135", index = "F", url = "https://atcoder.jp/contests/abc135/tasks/abc135_f" } }

[[bin]]
name = "abc135-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc135-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc135-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc135-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc135-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc135-f"
path = "src/bin/f.rs"
[dependencies]
proconio = { version = "0.3.7", features = ["derive"] }
itertools = "=0.9.0"
